--- a/public/404.html
+++ b/public/404.html
@@ -19,6 +19,9 @@
       var pathSegmentsToKeep = 1;
 
       var l = window.location;
+
+      // Always redirect to the main app with the path encoded in the query string
+      // This ensures the React app can handle the routing
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
         l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
